--- a/styles/styles.css
+++ b/styles/styles.css
@@ -137,6 +137,8 @@ header p{
 }
 .slider h2{
     text-align: center;
+    font-size: 15px;
+    font-weight: 100;
     font-size: 40px;
     margin: 50px 0 30px 0;
     color: #000;
